[gd_scene load_steps=2 format=3 uid="uid://heuhsrn653oa"]

[ext_resource type="Script" uid="uid://ckssujpt73rbb" path="res://ai.gd" id="1_c35dq"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_c35dq")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 112.0
offset_top = 59.0
offset_right = 838.0
offset_bottom = 94.0
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 853.0
offset_top = 62.0
offset_right = 954.0
offset_bottom = 93.0
text = "send"
metadata/_edit_use_anchors_ = true

[node name="TextEdit2" type="TextEdit" parent="."]
offset_left = 101.0
offset_top = 105.0
offset_right = 957.0
offset_bottom = 567.0
editable = false
metadata/_edit_use_anchors_ = true

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
